Wrap stings in gettex and fix UI issues related Banned Pool view

--- a/apps/block_scout_web/assets/css/components/_stakes_table.scss
+++ b/apps/block_scout_web/assets/css/components/_stakes_table.scss
@@ -107,7 +107,7 @@ $stakes-link-color: $primary !default;
   font-size: 14px;
   font-weight: normal;
   height: 60px;
-  line-height: 1.2;
+  line-height: 1.5;
   padding-right: $stakes-table-cell-separation;
   text-align: left;
   align-items: center;
